// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trade ship scenarios > a thousand ports each, giant map 1`] = `
{
  "a": {
    "arrivalsPerMinute": 146.5,
    "goldPerMinute": 61660000,
    "shipsArrived": 1465,
    "shipsSent": 1507,
    "tradeGold": 616608286n,
  },
  "b": {
    "arrivalsPerMinute": 136,
    "goldPerMinute": 61660000,
    "shipsArrived": 1360,
    "shipsSent": 1461,
    "tradeGold": 616608286n,
  },
  "goldPerTrade": 218300,
}
`;

exports[`trade ship scenarios > across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 5.2,
    "goldPerMinute": 782600,
    "shipsArrived": 26,
    "shipsSent": 30,
    "tradeGold": 3913195n,
  },
  "b": {
    "arrivalsPerMinute": 5.8,
    "goldPerMinute": 782600,
    "shipsArrived": 29,
    "shipsSent": 35,
    "tradeGold": 3913195n,
  },
  "goldPerTrade": 71150,
}
`;

exports[`trade ship scenarios > across the ocean, level-3 port 1`] = `
{
  "a": {
    "arrivalsPerMinute": 14.6,
    "goldPerMinute": 1451000,
    "shipsArrived": 73,
    "shipsSent": 81,
    "tradeGold": 7257198n,
  },
  "b": {
    "arrivalsPerMinute": 5.8,
    "goldPerMinute": 1451000,
    "shipsArrived": 29,
    "shipsSent": 35,
    "tradeGold": 7257198n,
  },
  "goldPerTrade": 71150,
}
`;

exports[`trade ship scenarios > fifty ports each, long route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 80.25,
    "goldPerMinute": 23740000,
    "shipsArrived": 535,
    "shipsSent": 805,
    "tradeGold": 158279892n,
  },
  "b": {
    "arrivalsPerMinute": 84.9,
    "goldPerMinute": 23740000,
    "shipsArrived": 566,
    "shipsSent": 847,
    "tradeGold": 158279892n,
  },
  "goldPerTrade": 143800,
}
`;

exports[`trade ship scenarios > long haul 1`] = `
{
  "a": {
    "arrivalsPerMinute": 3.6,
    "goldPerMinute": 1110000,
    "shipsArrived": 24,
    "shipsSent": 38,
    "tradeGold": 7402762n,
  },
  "b": {
    "arrivalsPerMinute": 4.35,
    "goldPerMinute": 1110000,
    "shipsArrived": 29,
    "shipsSent": 46,
    "tradeGold": 7402762n,
  },
  "goldPerTrade": 139700,
}
`;

exports[`trade ship scenarios > short coastal hop 1`] = `
{
  "a": {
    "arrivalsPerMinute": 5.8,
    "goldPerMinute": 60970,
    "shipsArrived": 29,
    "shipsSent": 30,
    "tradeGold": 304849n,
  },
  "b": {
    "arrivalsPerMinute": 6.6,
    "goldPerMinute": 60970,
    "shipsArrived": 33,
    "shipsSent": 35,
    "tradeGold": 304849n,
  },
  "goldPerTrade": 4917,
}
`;

exports[`trade ship scenarios > ten ports each across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 49.6,
    "goldPerMinute": 8849000,
    "shipsArrived": 248,
    "shipsSent": 289,
    "tradeGold": 44245218n,
  },
  "b": {
    "arrivalsPerMinute": 47.8,
    "goldPerMinute": 8849000,
    "shipsArrived": 239,
    "shipsSent": 280,
    "tradeGold": 44245218n,
  },
  "goldPerTrade": 90850,
}
`;

exports[`trade ship scenarios > ten ports, ~500-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 46.8,
    "goldPerMinute": 9295000,
    "shipsArrived": 234,
    "shipsSent": 285,
    "tradeGold": 46477370n,
  },
  "b": {
    "arrivalsPerMinute": 44.4,
    "goldPerMinute": 9295000,
    "shipsArrived": 222,
    "shipsSent": 274,
    "tradeGold": 46477370n,
  },
  "goldPerTrade": 101900,
}
`;

exports[`trade ship scenarios > ten ports, ~1800-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 32,
    "goldPerMinute": 10410000,
    "shipsArrived": 320,
    "shipsSent": 454,
    "tradeGold": 104077300n,
  },
  "b": {
    "arrivalsPerMinute": 31.3,
    "goldPerMinute": 10410000,
    "shipsArrived": 313,
    "shipsSent": 447,
    "tradeGold": 104077300n,
  },
  "goldPerTrade": 164400,
}
`;

exports[`train scenarios > external city in the cluster 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 371445n,
  "aGoldPerMinute": 74290,
  "aSelfTradeGold": 371445n,
  "bExternalTradeGold": 244370n,
  "bGoldDelta": 244370n,
  "trainUnitsSeen": 161,
}
`;

exports[`train scenarios > factory and four cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 205275n,
  "aGoldPerMinute": 41060,
  "aSelfTradeGold": 205275n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 154,
}
`;

exports[`train scenarios > factory and one city 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 224825n,
  "aGoldPerMinute": 44970,
  "aSelfTradeGold": 224825n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 161,
}
`;

exports[`train scenarios > two factories and two cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 283475n,
  "aGoldPerMinute": 56700,
  "aSelfTradeGold": 283475n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 280,
}
`;
